--- a/public/mainPageStyle.css
+++ b/public/mainPageStyle.css
@@ -361,5 +361,30 @@
       transform-origin: 100%; }
     .mfp-container {
       padding-left: 6px;
-      padding-right: 6px; } }
+      padding-right: 6px; }
+  }
+  a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
   
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .previous {
+    background-color: #f1f1f1;
+    color: black;
+  }
+  
+  .next {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .round {
+    border-radius: 50%;
+  }
+    
